[gd_scene load_steps=3 format=3 uid="uid://b2k1q8x7nlof8"]

[ext_resource type="FontFile" uid="uid://ce7y17n27iqt6" path="res://assets/fonts/Kenney Future.ttf" id="1_font"]
[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="2_script"]

[node name="MainMenu" type="Control"]
script = ExtResource("2_script")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 150
text = "Bop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SinglePlayerButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 36
text = "1 Player"

[node name="HostButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 36
text = "Host 2 Player"

[node name="IPContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 2
alignment = 1

[node name="IPLabel" type="Label" parent="MenuContainer/IPContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 24
text = "IP Address:"

[node name="IPAddressEdit" type="LineEdit" parent="MenuContainer/IPContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 24
text = "127.0.0.1"
placeholder_text = "Enter host IP"

[node name="JoinButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_font")
theme_override_font_sizes/font_size = 36
text = "Join 2 Player"

[node name="FutureBackgroundTexture" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 1 